--- a/force-app/main/default/classes/testListContainerController.cls
+++ b/force-app/main/default/classes/testListContainerController.cls
@@ -9,29 +9,14 @@
 @isTest
 private class testListContainerController {
     
-
-    @isTest static void test_emailServerController() {
-        // Implement test code
-        Test.startTest();
-        Account a = TestFactory.insertAccount();
-
-        emailServerController rec = emailServerController.sendEmail('body', 'subject', 'email@email.com', a.id);
+    @testSetup static void setup() {
+        // Create common test accounts
+        List<Account> testAccts = new List<Account>();
+        for(Integer i=0;i<2;i++) {
+            testAccts.add(new Account(Name = 'TestAcct'+i));
+        }
+        insert testAccts;  
         
-        Test.stopTest();
-
-    }
-
-    @isTest static void test_isvConsoleMapController() {
-        // Implement test code
-        //Add 0. Lead
-        //Add 1. Account
-        //Add 2. Contact
-        //Add 3. Package
-        //Add 4. PackageVersion
-        //Add 5. License
-
-        Test.startTest();
-
         // Insert License with Lead:
         Lead l = TestFactory.insertLead();
         sfLma__Package__c p1 = TestFactory.insertPackage();
@@ -44,44 +29,33 @@ private class testListContainerController {
         sfLma__Package__c p2 = TestFactory.insertPackage();
         sfLma__Package_Version__c pv2 = TestFactory.insertPackageVersion(p2.id);
         sfLma__License__c li2 = TestFactory.insertLicenseWithAccount(pv2.id, a.id, c.id);
-
-        List<isvConsoleMapController> lstRecs = isvConsoleMapController.getLocationData();
         
+    }
 
-        Test.stopTest();
+    @isTest static void test_emailServerController() {
+        Account acct = [SELECT Id FROM Account WHERE Name='TestAcct0' LIMIT 1];
+        emailServerController rec = emailServerController.sendEmail('body', 'subject', 'email@email.com', acct.id);
+    }
 
+    @isTest static void test_isvConsoleMapController() {
+        List<isvConsoleMapController> lstRecs = isvConsoleMapController.getLocationData();
 	}
 
 
     @isTest static void test_listContainerController() {
-        // Implement test code
-        //Add 0. Lead
-        //Add 1. Account
-        //Add 2. Contact
-        //Add 3. Package
-        //Add 4. PackageVersion
-        //Add 5. License
-        Test.startTest();
-        
-        // Insert License with Lead:
-        Lead l = TestFactory.insertLead();
-        sfLma__Package__c p1 = TestFactory.insertPackage();
-        sfLma__Package_Version__c pv1 = TestFactory.insertPackageVersion(p1.id);
-        sfLma__License__c li1 = TestFactory.insertLicenseWithLead(pv1.id, l.id);
-
-        // Insert License with Account and Contact:
-        Account a = TestFactory.insertAccount();
-        Contact c = TestFactory.insertContact(a.id);
-        sfLma__Package__c p2 = TestFactory.insertPackage();
-        sfLma__Package_Version__c pv2 = TestFactory.insertPackageVersion(p2.id);
-        sfLma__License__c li2 = TestFactory.insertLicenseWithAccount(pv2.id, a.id, c.id);
-
         List<listContainerController> lstRecs1 = listContainerController.getLicenseData('3', 'Latest Installs per App');
-        
         List<listContainerController> lstRecs2 = listContainerController.getLicenseData('3', 'Licenses Expiring Soon');
+    }
 
+    @isTest static void test_statusServerController() {
+        // Set mock callout class 
+        
+        
+        Test.startTest();
+        Test.setMock(HttpCalloutMock.class, new WebServiceMockImpl());
+        
+        List<statusServerController> lstRecs1 = statusServerController.getEvents('1', 'Upcoming Releases');
         Test.stopTest();
-
     }
     
 
