--- a/force-app/main/default/classes/ISVConsoleHelper.cls
+++ b/force-app/main/default/classes/ISVConsoleHelper.cls
@@ -5,128 +5,8 @@
  * For full license text, see LICENSE.txt file in the repo root or https://opensource.org/licenses/BSD-3-Clause
  */
 
-public with sharing class ISVConsole_Helper {
-    public static String getFieldValueFromJson(String jsonBody, String fieldName)
-    {
-
-        String returnValue = '';
-        JSONParser parser2 = JSON.createParser(jsonBody);
-           
-           Integer textCount = 1;
-            while (parser2.nextToken() != null) {
-                if ((parser2.getCurrentToken() == JSONToken.FIELD_NAME) && 
-                    (parser2.getText() == fieldName)) {
-                        
-                        parser2.nextToken();
-                        String jsonValue = parser2.getText();
-                        System.debug('fieldname = '+ fieldName + 'and jsonValue = ' + jsonValue);
-                        if (fieldname.equalsIgnoreCase('text'))
-                        {
-                            
-                            System.debug('fieldname is text: ' + jsonValue + 'and textcount = ' + textCount);
-                            if (textCount == 1)
-                            {
-                                System.debug('textcount = 2 : jsonValue = ' + jsonValue);
-                                returnValue =  parser2.getText();
-                            }
-                                
-                            textCount ++;
-                        }
-                        else
-                        	returnValue =  parser2.getText();
-                        
-                    }
-            }
-
-            return returnValue;
-
-    }
-	
-
-public static Integer getMonthIntergerValue(String monthStringValue)
-    {
-        Integer monthValue = 0;
-        
-        if(monthStringValue.equalsIgnoreCase('Jan'))
-            monthValue = 1;
-        if(monthStringValue.equalsIgnoreCase('Feb'))
-            monthValue = 2;
-        if(monthStringValue.equalsIgnoreCase('Mar'))
-            monthValue = 3;
-        if(monthStringValue.equalsIgnoreCase('Apr'))
-            monthValue = 4;
-        if(monthStringValue.equalsIgnoreCase('May'))
-            monthValue = 5;
-        if(monthStringValue.equalsIgnoreCase('Jun'))
-            monthValue = 6;
-        if(monthStringValue.equalsIgnoreCase('Jul'))
-            monthValue = 7;
-        if(monthStringValue.equalsIgnoreCase('Aug'))
-            monthValue = 8;
-        if(monthStringValue.equalsIgnoreCase('Sep'))
-            monthValue = 9;
-        if(monthStringValue.equalsIgnoreCase('Oct'))
-            monthValue = 10;
-        if(monthStringValue.equalsIgnoreCase('Nov'))
-            monthValue = 11;
-        if(monthStringValue.equalsIgnoreCase('Dec'))
-            monthValue = 12;
-        
-        
-        return monthValue;
-    }
-
-
-
-
-public static String GetSobjectField(Sobject e, String lcfield)
-    {
-        
-        String returnValue = '';
-        
-        Map<String, Object> fieldsToValueMap = e.getPopulatedFieldsAsMap();
-        System.debug('######## fieldsToValueMap: ' + fieldsToValueMap);
-        Set <String> fieldsSet = new Set<String>();
-        
-        fieldsSet = fieldsToValueMap.keySet();
-        System.debug('######## fieldsSet: ' + fieldsSet);
-
-        if (lcfield.contains('.')) // than it is a parent-relationship field
-                {
-                    String relName = lcfield.substringBefore('.');
-                    System.debug('######## relName: ' + relName);
-                    String relField = lcfield.substringAfter('.');
-                    System.debug('######## relField: ' + relField);
-                    if (relField.contains('.')) // than it is a 2 level parent-relationship field
-                    {
-                       String relName2 = relField.substringBefore('.');
-                       System.debug('######## relName2: ' + relName2);
-                       String relField2 = relField.substringAfter('.');
-                       System.debug('######## relField2: ' + relField2);
-                       if (fieldsSet.contains(lcfield))
-                            returnValue = String.valueOf(e.getSObject(relName).getSObject(relName2).get(relField2));
-                    }
-                    else
-                    {
-                        if (fieldsSet.contains(lcfield))
-                        {
-                            System.debug('######## 1st level not null: '); 
-                            returnValue = String.valueOf(e.getSObject(relName).get(relField));
-                        }
-                    }
-                }
-                    
-                else
-                {
-                    if (fieldsSet.contains(lcfield))
-                    returnValue = String.valueOf( e.get(lcfield) );
-                }
-     
-        return returnValue;
-    }
-
-
-// CRUD and FLS Helper Methods
+public with sharing class ISVConsoleHelper {
+   
 
 
 public static void AddFieldToObjectsMap(String fieldName, String initialObjectName, Map<String, Set<String>> theMap)
